# tcc

./: .gitignore  README.md  apresentacao.tex  bibliography.bib  codebook.toml  latexmkrc  main.ipynb  main.py  main.tex  pyproject.toml
artigos/: Artigo_EconometriaSetorPublico.tex
output/: regression_results.tex  regression_results_lp.tex  regression_results_mt.tex
raw_data/: saeb_lp.csv  saeb_mt.csv
