[project]
name = "trabalho-pedro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "basedosdados>=2.0.2",
    "linearmodels>=7.0",
    "matplotlib>=3.10.8",
    "numpy<2",
    "openpyxl>=3.1.5",
    "pandas<3",
    "pysmatch>=2.0",
    "seaborn[stats]>=0.13.2",
]
